--- a/kursach/nbproject/private/private.properties
+++ b/kursach/nbproject/private/private.properties
@@ -1,5 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\olejaja\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
-j2ee.server.home=C:/Users/olejaja/Documents/NetBeansProjects/apache-tomcat-9.0.0.M26
-j2ee.server.instance=tomcat90:home=C:\\Users\\olejaja\\Documents\\NetBeansProjects\\apache-tomcat-9.0.0.M26
+deploy.ant.properties.file=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3910414904.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Program Files/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
+javac.debug=true
+javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\olejaja\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
